force-app/main/default/objects/IpAddressAnomoly__c/IpAddressAnomoly__c.object-meta.xml
<CustomObject>
    <label>IP Address Anomoly</label>
    <nameField>
        <displayFormat>IPAA-{00000}</displayFormat>
        <label>IpAddressAnomoly Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP Address Anomolies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>