force-app/main/default/objects/IpAddressAnomoly__c/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <description>The time of the specified event. For example, 2020-01-20T19:12:26.965Z. Milliseconds are the most granular setting.</description>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>