force-app/main/default/objects/IpAddressAnomoly__c/fields/EventIdentifier__c.field-meta.xml
<CustomField>
    <fullName>EventIdentifier__c</fullName>
    <description>The unique identifier for each record in Event. Use this field as the primary key in your queries.</description>
    <label>Event Identifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>