force-app/main/default/objects/IpAddressAnomoly__c/fields/LoginDate__c.field-meta.xml
<CustomField>
    <fullName>LoginDate__c</fullName>
    <description>The login time of the specified event. For example, 2020-01-20T19:12:26.965Z. Milliseconds are the most granular setting.</description>
    <label>Login Date</label>
    <type>DateTime</type>
</CustomField>