force-app/main/default/objects/IpAddressAnomoly__c/fields/LoginHistoryId__c.field-meta.xml
<CustomField>
    <fullName>LoginHistoryId__c</fullName>
    <label>Login History Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>