force-app/main/default/objects/IpAddressAnomoly__c/fields/LoginKey__c.field-meta.xml
<CustomField>
    <fullName>LoginKey__c</fullName>
    <label>Login Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>