force-app/main/default/objects/IpAddressAnomoly__c/fields/LoginType__c.field-meta.xml
<CustomField>
    <fullName>LoginType__c</fullName>
    <label>Login Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>