force-app/main/default/objects/IpAddressAnomoly__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>EventDate__c</columns>
    <columns>EventType__c</columns>
    <columns>EventIp__c</columns>
    <columns>LoginIp__c</columns>
    <columns>EventIdentifier__c</columns>
    <columns>LoginDate__c</columns>
    <columns>LoginHistoryId__c</columns>
    <columns>LoginKey__c</columns>
    <columns>SessionKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>